tests/snapshots/parser_error_fixtures/missing_with_row_tail.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_with_row_tail.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Expected row variable name after `|` in effect expression.

  examples/parser_errors/missing_with_row_tail.flx:1:28
  |
1 | fn main() -> Int with IO | {
  |                            ^

Hint:
  Write row tails as `... | e` where `e` is a lowercase identifier.

Note:
  while parsing function `main`
== stdout ==
<not executed>
