tests/snapshots/parser_error_fixtures/mixed_closer_nested_delimiters.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/mixed_closer_nested_delimiters.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E076]: Missing Closing Delimiter

Expected a closing `]` to match this opening `[`.

  examples/parser_errors/mixed_closer_nested_delimiters.flx:2:17
  |
2 |     let value = [add(1, 2}]
  |                 ^

note: Expected `]` before this token.
  examples/parser_errors/mixed_closer_nested_delimiters.flx:2:26
  |
2 |     let value = [add(1, 2}]
  |                          ^


Error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  examples/parser_errors/mixed_closer_nested_delimiters.flx:2:21
  |
2 |     let value = [add(1, 2}]
  |                     ^

note: Expected `)` before this token.
  examples/parser_errors/mixed_closer_nested_delimiters.flx:2:26
  |
2 |     let value = [add(1, 2}]
  |                          ^

Found 2 errors.
== stdout ==
<not executed>
