tests/snapshots/parser_error_fixtures/nested_multi_declaration_errors.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/nested_multi_declaration_errors.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Constructor Field Separator

I was expecting `,` or `)` between constructor fields, but I found an identifier.

  examples/parser_errors/nested_multi_declaration_errors.flx:2:14
  |
2 |     Item(Int String),
  |              ^^^^^^

Note:
  while parsing data declaration `Bad`


error[E034]: Missing Effect Operation Colon

Missing `:` in effect operation signature. Write it as `op: Type -> Return`.

  examples/parser_errors/nested_multi_declaration_errors.flx:6:11
  |
6 |     print String -> Unit
  |           ^^^^^^

Note:
  while parsing effect `Console`


error[E034]: Missing Match Arm Arrow

I was expecting `->` in this match arm, but I found a string literal.

  examples/parser_errors/nested_multi_declaration_errors.flx:11:11
   |
11 |         0 "zero",
   |           ^^^^^^

Note:
  while parsing function `main` > `match` expression

Help:
  Write match arms as `match x { pattern -> body, ... }`.

Found 3 errors.
== stdout ==
<not executed>
