tests/snapshots/parser_error_fixtures/stray_top_level_arrow.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/stray_top_level_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
error[E031]: Expected Expression

Expected expression, found `->`.

  examples/parser_errors/stray_top_level_arrow.flx:1:1
  |
1 | ->
  | ^^
== stdout ==
<not executed>
