tests/snapshots/parser_error_fixtures/uppercase_row_tail_after_named_effect.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/uppercase_row_tail_after_named_effect.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Effect row tail variables must be lowercase identifiers.

  examples/parser_errors/uppercase_row_tail_after_named_effect.flx:1:28
  |
1 | fn main() -> Int with IO | E {
  |                            ^

Hint:
  Did you mean `with ..., E`? Use `,` to list multiple effects; use `| e` only for lowercase row-tail variables.

Note:
  while parsing function `main`
== stdout ==
<not executed>
