tests/snapshots/parser_error_fixtures/uppercase_row_tail_head.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/uppercase_row_tail_head.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Unexpected Token

Effect row tail variables must be lowecase identifiers.

  examples/parser_errors/uppercase_row_tail_head.flx:1:24
  |
1 | fn main() -> Int with |E {
  |                        ^

Hint:
  Use a lowercase tail name, for example `with |e`.

Note:
  while parsing function `main`
== stdout ==
<not executed>
